--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,12 @@
     <ListView
         android:id="@+id/contraction_list"
         android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_height="300dp" />
+
     <Button
         android:id="@+id/contraction_button"
-        android:text="CONTRACTION"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="CONTRACTION" />
 
 </android.support.constraint.ConstraintLayout>
