--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,38 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <ListView
         android:id="@+id/contraction_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8"
-        android:transcriptMode="alwaysScroll"
-        android:stackFromBottom="true"/>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:padding="20dp"
-    android:orientation="horizontal"
-    android:layout_weight="2">
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll" />
 
-    <Button
-        android:id="@+id/restart"
-        android:text="@string/restart"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="horizontal"
+        android:padding="20dp">
 
-    <Button
-        android:id="@+id/contraction_button"
-        android:layout_width="0dp"
-        android:layout_weight="4"
-        android:layout_height="match_parent"
-        android:text="@string/start" />
+        <ImageButton
+            android:id="@+id/restart"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            android:src="@drawable/ic_replay_black_24dp" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/contraction_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/start"
+            android:textColor="#ffffff" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
