--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#61ced3</color>
+    <color name="colorPrimaryDark">#00adb4</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="notEnable">#C8C8C8</color>
+    <color name="darkGrey">#404040</color>
 </resources>
