--- a/app/src/main/res/layout/contraction_row.xml
+++ b/app/src/main/res/layout/contraction_row.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/start"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/darkGrey"/>
+                android:textColor="@color/darkGrey" />
         </LinearLayout>
 
 
@@ -36,7 +36,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/in_list_start" />
+                android:text="@string/in_list_stop" />
 
             <TextView
                 android:id="@+id/stop"
