--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/hospital_info"
-        android:title="@string/hospital" />
+        android:title="@string/hospital_info" />
     <item android:id="@+id/app_info"
         android:title="@string/app_info" />
 </menu>
