--- a/app/src/main/res/layout/contraction_row.xml
+++ b/app/src/main/res/layout/contraction_row.xml
@@ -62,4 +62,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ImageView
+        android:id="@+id/divider"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:visibility="gone"
+        android:src="@color/darkGrey"/>
+
 </LinearLayout>
