--- a/app/src/main/res/layout/contraction_row.xml
+++ b/app/src/main/res/layout/contraction_row.xml
@@ -16,6 +16,7 @@
             android:layout_alignParentStart="true">
 
             <TextView
+                android:id="@+id/st"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/in_list_start" />
